--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sf_npm",
   "version": "1.0.0",
-  "description": "",
+  "description": "sf_npm",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/alexMamaevs/sf_npm.git"
   },
-  "author": "",
+  "author": "Aleksey Mamaev",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alexMamaevs/sf_npm/issues"
